# i2s

./: .gitignore  CMakeLists.txt
I2Slice/: I2Slice.sln
I2Slice/I2Slice/: CodePast.txt  CompTask.cpp  CompTask.h  I2Slice.vcxproj  I2Slice.vcxproj.filters  Restaurant.cpp  Restaurant.h  SGlobal.cpp  SGlobal.h  Table.cpp  Table.h  i2slice.cpp  nCRPSlice.cpp
I2Slice/SpeedTest/: SpeedTest.vcxproj  Test.cpp
I2Slice/UncollapsedSampler/: FastMatd.lib
I2Slice/data/flower/: realflower.mat
I2Slice/doc/: SamplerCycle.pptx
I2Slice/run/: animateHierarchicalData.m  i2slice_exp.m  i2slice_toy.m  plotHierarchicalData.m
i2s/: Restaurant.cpp  Restaurant.h  SGlobal.cpp  SGlobal.h  Table.cpp  Table.h  i2gmm.cpp  i2s.vcxproj  i2s.vcxproj.filters
